# agentsync

./: .dockerignore  .gitignore  .release-please-manifest.json  .releaserc.json  .rustfmt.toml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  SECURITY.md  biome.json  changes.diff  check_path  check_path.rs  cli.mdx.tmp  codecov.yml  docs  fix_clippy.py  fix_clippy_v2.py  fix_clippy_v3.py  fix_copy_dir_all.rs  fix_copy_dir_all_v2.rs  lefthook.yml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-notes.md  release-please-config.json  release.config.js  renovate.json  sonar-project.properties  spec.patch
.agents/: AGENTS.md  agentsync.toml
.agents/command/: bolt.md  scribe.md  sentinel.md
.agents/journal/: bolt.md  documentation_audit_report.md  scribe-journal.md  sentinel.md
.agents/skills/: agentsync  astrolicious-astro  best-practices  core-web-vitals  docker-expert  frontend-design  nothing-design  pinned-tag  registry.json  rust-async-patterns
.agents/skills/agentsync/: SKILL.md
.agents/skills/astrolicious-astro/: SKILL.md  download.tmp
.agents/skills/best-practices/: download.tmp
.agents/skills/frontend-design/: download.tmp
.agents/skills/nothing-design/: download.tmp
.agents/skills/pinned-tag/: SKILL.md
.agents/skills/rust/: SKILL.md
.agents/skills/rust-async-patterns/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md  issue-labeler-config.yml  labeler.yml  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: catalog-e2e.yml  ci.yml  cleanup-cache.yml  contributor-report.yml  deploy-docs.yml  greetings.yml  issue-labeler.yml  label.yml  labels-sync.yml  release.yml  semantic-pull-request.yml  sonarcloud.yml  stale.yml
.opencode/: package-lock.json
.specify/memory/: constitution.md
.specify/scripts/bash/: check-prerequisites.sh  common.sh  create-new-feature.sh  setup-plan.sh  update-agent-context.sh
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
issues/270/: comments.md
npm/: package.json.tmpl
npm/agentsync/: README.md  package-lock.json  package.json  tsconfig.json
npm/agentsync/scripts/: sync-optional-deps.js
npm/agentsync/src/: index.ts
openspec/: config.yaml
openspec/changes/agents-skills-monorepo/: design.md  proposal.md  state.yaml  tasks.md  verify-report.md
openspec/changes/gitignore-root-scoping/: design.md  proposal.md  state.yaml  tasks.md  verify-report.md
openspec/changes/init-wizard-agent-config-layout/: design.md  exploration.md  proposal.md  state.yaml  tasks.md  verify-report.md
openspec/specs/agents-skills-repo/: spec.md
openspec/specs/autoskills-discovery/: spec.md
openspec/specs/config-schema/: spec.md
openspec/specs/core-sync-engine/: spec.md
openspec/specs/documentation/: spec.md
openspec/specs/gitignore-management/: spec.md
openspec/specs/mcp-generation/: spec.md
openspec/specs/nested-agent-context/: spec.md
openspec/specs/nested-glob-sync/: spec.md
openspec/specs/skill-adoption/: spec.md
openspec/specs/skill-lifecycle/: spec.md
openspec/specs/skill-recommendations/: spec.md
scripts/: bench_setup.py  setup.js  update-optional-deps.js  update-versions.js
specs/001-skills-sh-integration/: README.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: agent_ids.rs  banner.txt  config.rs  fs.rs  gitignore.rs  init.rs  lib.rs  linker.rs  main.rs  mcp.rs  output.rs  skills_layout.rs  templating.rs  update_check.rs
src/commands/: doctor.rs  doctor_tests.rs  mod.rs  skill.rs  skill_fmt.rs  status.rs  status_tests.rs
src/skills/: catalog.rs  catalog.v1.toml  detect.rs  install.rs  manifest.rs  mod.rs  provider.rs  registry.rs  suggest.rs  transaction.rs  uninstall.rs  update.rs
tests/: all_tests.rs  cli_tests.rs  real_world_skills.rs  test_agent_adoption.rs  test_bug.rs  test_catalog_integration.rs  test_catalog_integrity.rs  test_cli_tui_compatibility_contract.rs  test_module_map_cli.rs  test_skill_suggest_output.rs  test_status_cli.rs  test_update_output.rs
tests/contracts/: test_install_output.rs  test_skill_suggest_output.rs
tests/e2e/: Dockerfile.e2e  docker-compose.yml  run.sh  test_suite.sh
tests/integration/: mod.rs  skill_install.rs  skill_suggest.rs  skill_update.rs
tests/manual/: Dockerfile.manual  run_manual_tests.sh  test_wizard_interactive.sh
tests/security_repro/: mod.rs
tests/unit/: install.rs  manifest.rs  mod.rs  provider.rs  registry.rs  suggest_catalog.rs  suggest_detector.rs  suggest_install.rs  transaction.rs
website/docs/: README.md  astro.config.mjs  package.json  tsconfig.json
(+214 files in other folders)
