[package]
name = "agentsync"
version = "1.21.2"
edition = "2024"
rust-version = "1.89"
description = "A fast CLI tool to sync AI agent configurations and MCP servers across Claude, Copilot, Cursor, and more using symbolic links."
license = "MIT"
repository = "https://github.com/dallay/agentsync"
homepage = "https://github.com/dallay/agentsync"
documentation = "https://github.com/dallay/agentsync#readme"
readme = "README.md"
keywords = ["ai", "agents", "cli", "configuration", "mcp"]
categories = ["command-line-utilities", "development-tools"]
authors = ["Yuniel Acosta <yunielacosta738@gmail.com>"]
exclude = [
    ".github/",
    ".gitignore",
    "*.md",
    "!README.md",
]

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Config parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
toml = "0.9"
serde_yaml = "0.9"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
zip = "7"
flate2 = { version = "1.0", features = ["zlib"] }
tar = "0.4"
sha2 = "0.10"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Terminal output
colored = "3.0"
dialoguer = "0.11"

# File system
walkdir = "2.5"

# Path handling
pathdiff = "0.2"

# HTTP + async runtime (added for skills.sh integration feature)
reqwest = { version = "0.13.1", features = ["json", "gzip", "stream"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
tracing = "0.1"
tracing-subscriber = "0.3"
futures-util = "0.3"
lazy_static = "1.4"

# Semantic versioning for skill update resolution
semver = "1.0"

# Temp directories for skill archive extraction
tempfile = "3.15"

[dev-dependencies]
rand = "0.9"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3    # Optimize for speed over size

[[bin]]
name = "agentsync"
path = "src/main.rs"

[lib]
name = "agentsync"
path = "src/lib.rs"
